feat(backend): implementar generación de PDF, edición de documentos financieros y mejoras en tesorería